Adding update API and calculation structure
