# src/main/java/com/hss/investment/endpoint/RateController.java
@@ -7,6 +7,7 @@ import com.hss.openapi.api.RateApi;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import lombok.RequiredArgsConstructor;
+import org.springframework.http.HttpHeaders;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 
@@ -17,6 +18,7 @@ import java.time.LocalDate;
 public class RateController implements RateApi {
 
     private final RateService rateService;
+    private final RateKaggleUpdater rateKaggleUpdater;
 
     @Override
     public ResponseEntity<GenericResponseDTO<?>> getRate(HttpServletRequest request,
@@ -27,8 +29,26 @@ public class RateController implements RateApi {
         var responseDto = rateService.retrieveRates(new RateQueryDTO(
             RateQueryDTO.RateType.fromValue(rateType), initialDate, finalDate
         ));
-        return ResponseEntity.ok(new GenericResponseDTO<>(responseDto));
+        return ResponseEntity.ok(new GenericResponseDTO<>(responseDto))
+            .headers(buildHeader())
+            .build();
     }
 
+    @Override
+    public ResponseEntity<GenericResponseDTO<?>> updateRates(HttpServletRequest request,
+                                                             HttpServletResponse response) {
+        rateKaggleUpdater.retrieveAndUpdateRates();
+        return ResponseEntity.ok(new GenericResponseDTO<>(null))
+            .headers(buildHeader())
+            .build();
+    }
 
+    private HttpHeader buildHeader() {
+        return HttpHeader.builder()
+                .name("X-Last-Update")
+                .value(rateKaggleUpdater.getLastUpdatedTimestamp()
+                    .map(Object::toString)
+                    .orElse(null))
+                .build();
+    }
 }
